--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_home"
     android:layout_width="match_parent"
@@ -15,7 +16,8 @@
         android:id="@+id/IMAGEID"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/logout" />
+        android:layout_below="@+id/logout"
+        app:srcCompat="@android:drawable/presence_away" />
 
     <Button
         android:text="Logout"
