Non funziona la sincronizzazione tra app e server

--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -149,7 +149,8 @@
             android:hint="Ripetere Password"
             android:ems="10"
             android:layout_below="@+id/txtPass2"
-            android:layout_alignStart="@+id/editUsername" />
+            android:layout_alignStart="@+id/editUsername"
+            android:text="pass" />
 
         <Button
             android:text="Registrati"
