--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -36,7 +36,7 @@
             android:layout_centerHorizontal="true" />
 
         <TextView
-            android:text="Nome*"
+            android:text="Nome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="26dp"
@@ -66,7 +66,7 @@
             android:inputType="textPersonName" />
 
         <TextView
-            android:text="Codice fiscale*"
+            android:text="Codice fiscale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="34dp"
@@ -87,7 +87,7 @@
             android:inputType="textPersonName" />
 
         <TextView
-            android:text="Username*"
+            android:text="Username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
@@ -107,7 +107,7 @@
             android:inputType="textPersonName" />
 
         <TextView
-            android:text="Password*"
+            android:text="Password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
@@ -127,7 +127,7 @@
             android:inputType="textPassword" />
 
         <TextView
-            android:text="Ripetere Password*"
+            android:text="Ripetere Password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
@@ -150,22 +150,39 @@
             android:text="Registrati"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
             android:id="@+id/buttonReg"
             android:textColor="@android:color/background_light"
             android:backgroundTint="#db524c"
             tools:textSize="18sp"
-            android:layout_below="@+id/editPassword2"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="14dp" />
+            android:layout_below="@+id/checkBox"
+            android:layout_centerHorizontal="true" />
 
         <TextView
-            android:text="Cognome*"
+            android:text="Cognome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
             android:id="@+id/txtCognome"
             tools:textSize="20sp"
             android:layout_below="@+id/editNome"
+            android:layout_centerHorizontal="true" />
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_marginTop="22dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editPassword2"
+            android:layout_centerHorizontal="true"
+            android:text="L'utente accetta il trattamento dei dati personali secondo D.Lgs 196/03" />
+
+        <TextView
+            android:id="@+id/textErrPrivacy"
+            android:layout_marginTop="11dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editPassword2"
             android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
